apps/houndarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: houndarr
  namespace: houndarr
spec:
  selector:
    app: houndarr
  ports:
    - port: 80
      targetPort: 8877
